database connection test complete